# viewrosreestr

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py  models.py  settings.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: api.js  index.jsx  style.css
frontend/src/components/: ReestrMap.jsx  components.css  reestrForm.jsx
