[tool.poetry]
name = "viewrosreestr"
version = "0.1.0"
description = ""
authors = ["Nikuma <ybr811@gmail.com>"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.91.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
rosreestr2coord = "^4.1.6"

[tool.poetry.group.dev.dependencies]
flake8 = "<4.0.0"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
app = 'app.main:main'
